# mcp-f1analisys

./: README.md  pyproject.toml  railway.toml  server.py
mcp_f1analisys/model/: __init__.py  drivers_laps_range.py
mcp_f1analisys/server/: mcp_server.py
mcp_f1analisys/tools/: f1_tools.py
